--- a/pages/html.html
+++ b/pages/html.html
@@ -12,30 +12,20 @@
         max-width: 1300px;
       }
       
-      a {
+      .pagesLinks {
         outline: none;
-        /* text-decoration: none; */
         color: rgb(54, 47, 47);
       }
 
-      a:link {
+      /* .pagesLinks:link {
         color: black;
-      }
-
-      /* a:visited {
-        color: #437a16;
-      }
-
-      a:focus {
-        
       } */
 
-      a:hover {
-        /* border-bottom: 1px solid; */
+      .pagesLinks:hover {
         background: rgba(220, 220, 220, 0.789);
       }
 
-      a:active {
+      .pagesLinks:active {
         border: 4px inset white;
         border-radius: 4px;
         background: whitesmoke;
@@ -72,14 +62,14 @@
         <ol>
           <li><strong>Что такое HTML и как он работает?</strong>
             <ul>
-              <li><a href="../pages/html/ch1-1-1.html">Основные концепции веб-страниц: структура, браузеры и HTML.</a></li>
-              <li><a href="../pages/html/ch1-1-2.html">Роль HTML в связке с CSS и JavaScript.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch1-1-1.html">Основные концепции веб-страниц: структура, браузеры и HTML.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch1-1-2.html">Роль HTML в связке с CSS и JavaScript.</a></li>
             </ul>
           </li>
           <li><strong>Первая HTML-страница</strong>
             <ul>
-              <li><a href="../pages/html/ch1-2-1.html">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
-              <li><a href="../pages/html/ch1-2-2.html">Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></a></code>.</li>
+              <li><a class="pagesLinks" href="../pages/html/ch1-2-1.html">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch1-2-2.html">Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></a></code>.</li>
               <li>Практика: создание первой страницы с заголовком и текстом.</li>
             </ul>
           </li>
@@ -89,20 +79,20 @@
         <ol>
           <li><strong>Параграфы и отступы</strong>
             <ul>
-              <li><a href="../pages/html/ch2-1-1.html"">Теги <code>&lt;p></code>, <code>&lt;br></code>, <code>&lt;hr></a></code>.</li>
+              <li><a class="pagesLinks" href="../pages/html/ch2-1-1.html"">Теги <code>&lt;p></code>, <code>&lt;br></code>, <code>&lt;hr></a></code>.</li>
               <li>Практика: создание текста с параграфами и разделительными линиями.</li>
             </ul>
           </li>
           <li><strong>Форматирование текста</strong>
             <ul>
-              <li><a href="../pages/html/ch2-2-1.html">Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></a></code>.</li>
-              <li><a href="../pages/html/ch2-2-2.html">Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch2-2-1.html">Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></a></code>.</li>
+              <li><a class="pagesLinks" href="../pages/html/ch2-2-2.html">Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</a></li>
               <li>Практика: форматирование абзацев с разными стилями текста.</li>
             </ul>
           </li>
           <li><strong>Списки</strong>
             <ul>
-              <li><a href="../pages/html/ch2-3-1.html">Нумерованные списки <code>&lt;ol></code> и ненумерованные <code>&lt;ul></code>, элементы списка <code>&lt;li></a></code>.</li>
+              <li><a class="pagesLinks" href="../pages/html/ch2-3-1.html">Нумерованные списки <code>&lt;ol></code> и ненумерованные <code>&lt;ul></code>, элементы списка <code>&lt;li></a></code>.</li>
               <li>Практика: создание списков с различными типами пунктов.</li>
             </ul>
           </li>
@@ -112,14 +102,14 @@
         <ol>
           <li><strong>Гиперссылки</strong>
             <ul>
-              <li><a href="../pages/html/ch3-1-1.html">Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</a></li>
-              <li><a href="../pages/html/ch3-1-2.html">Ссылки на внутренние страницы и внешние ресурсы.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch3-1-1.html">Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch3-1-2.html">Ссылки на внутренние страницы и внешние ресурсы.</a></li>
               <li>Практика: создание набора гиперссылок.</li>
             </ul>
           </li>
           <li><strong>Изображения</strong>
             <ul>
-              <li><a href="../pages/html/ch3-2-1.html">Тег <code>&lt;img></code>, атрибуты <code>src</code>, <code>alt</code>, <code>width</code>, <code>height</code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch3-2-1.html">Тег <code>&lt;img></code>, атрибуты <code>src</code>, <code>alt</code>, <code>width</code>, <code>height</code>.</a></li>
               <li>Практика: вставка и настройка изображений на странице.</li>
             </ul>
           </li>
@@ -129,14 +119,14 @@
         <ol>
           <li><strong>Семантические теги</strong>
             <ul>
-              <li><a href="../pages/html/ch4-1-1.html">Основные структурные элементы: <code>&lt;header></code>, <code>&lt;footer></code>, <code>&lt;nav></code>, <code>&lt;main></code>, <code>&lt;article></code>, <code>&lt;section></code>, <code>&lt;aside></code>.</a></li>
-              <li><a href="../pages/html/ch4-1-2.html">Важность семантики для SEO и доступности.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch4-1-1.html">Основные структурные элементы: <code>&lt;header></code>, <code>&lt;footer></code>, <code>&lt;nav></code>, <code>&lt;main></code>, <code>&lt;article></code>, <code>&lt;section></code>, <code>&lt;aside></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch4-1-2.html">Важность семантики для SEO и доступности.</a></li>
               <li>Практика: структурирование страницы с использованием семантических тегов.</li>
             </ul>
           </li>
           <li><strong>Таблицы</strong>
             <ul>
-              <li><a href="../pages/html/ch4-2-1.html">Теги <code>&lt;table></code>, <code>&lt;tr></code>, <code>&lt;td></code>, <code>&lt;th></code>, атрибуты colspan, rowspan.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch4-2-1.html">Теги <code>&lt;table></code>, <code>&lt;tr></code>, <code>&lt;td></code>, <code>&lt;th></code>, атрибуты colspan, rowspan.</a></li>
               <li>Практика: создание таблиц с различными форматами.</li>
             </ul>
           </li>
@@ -146,15 +136,15 @@
         <ol>
           <li><strong>Формы</strong>
             <ul>
-              <li><a href="../pages/html/ch5-1-1.html">Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</a></li>
-              <li><a href="../pages/html/ch5-1-2.html">Поля ввода: текстовые поля, пароли, чекбоксы, радиокнопки, селекторы.</a></li>
-              <li><a href="../pages/html/ch5-1-3.html">Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch5-1-1.html">Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch5-1-2.html">Поля ввода: текстовые поля, пароли, чекбоксы, радиокнопки, селекторы.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch5-1-3.html">Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</a></li>
               <li>Практика: создание форм для сбора данных пользователей.</li>
             </ul>
           </li>
           <li><strong>Отправка данных</strong>
             <ul>
-              <li><a href="../pages/html/ch5-2-1.html">Понимание GET и POST методов.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch5-2-1.html">Понимание GET и POST методов.</a></li>
               <li>Обработка отправки форм на сервер.</li>
             </ul>
           </li>
@@ -164,13 +154,13 @@
         <ol>
           <li><strong>Аудио и видео</strong>
             <ul>
-              <li><a href="../pages/html/ch6-1-1.html">Теги <code>&lt;audio></code>, <code>&lt;video></code>, атрибуты <code>controls</code>, <code>autoplay</code>, <code>loop</code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch6-1-1.html">Теги <code>&lt;audio></code>, <code>&lt;video></code>, атрибуты <code>controls</code>, <code>autoplay</code>, <code>loop</code>.</a></li>
               <li>Практика: вставка мультимедиа на веб-страницу.</li>
             </ul>
           </li>
           <li><strong>Интерактивные элементы</strong>
             <ul>
-              <li><a href="../pages/html/ch6-2-1.html">Теги <code>&lt;details></code>, <code>&lt;summary></code>, <code>&lt;dialog></code>, <code>&lt;progress></code>, <code>&lt;meter></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch6-2-1.html">Теги <code>&lt;details></code>, <code>&lt;summary></code>, <code>&lt;dialog></code>, <code>&lt;progress></code>, <code>&lt;meter></code>.</a></li>
               <li>Практика: работа с интерактивными элементами на странице.</li>
             </ul>
           </li>
@@ -180,19 +170,19 @@
         <ol>
           <li><strong>Метаданные</strong>
             <ul>
-              <li><a href="../pages/html/ch7-1-1.html">Тег <code>&lt;meta></code>, атрибуты <code>charset</code>, <code>name</code>, <code>content</code>, настройка заголовков и описаний для SEO.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch7-1-1.html">Тег <code>&lt;meta></code>, атрибуты <code>charset</code>, <code>name</code>, <code>content</code>, настройка заголовков и описаний для SEO.</a></li>
               <li>Практика: настройка метаданных для веб-страницы.</li>
             </ul>
           </li>
           <li><strong>Комментарии</strong>
             <ul>
-              <li><a href="../pages/html/ch7-2-1.html">Тег комментария <code>&lt;!-- комментарий --></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch7-2-1.html">Тег комментария <code>&lt;!-- комментарий --></code>.</a></li>
               <li>Использование комментариев для пояснений в коде.</li>
             </ul>
           </li>
           <li><strong>Ссылки на внешние ресурсы</strong>
             <ul>
-              <li><a href="../pages/html/ch7-3-1.html">Подключение CSS и JavaScript: теги <code>&lt;link></code> и <code>&lt;script></code>.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch7-3-1.html">Подключение CSS и JavaScript: теги <code>&lt;link></code> и <code>&lt;script></code>.</a></li>
               <li>Практика: подключение внешних файлов.</li>
             </ul>
           </li>
@@ -202,7 +192,7 @@
         <ol>
           <li><strong>Валидация HTML</strong>
             <ul>
-              <li><a href="../pages/html/ch8-1-1.html">Как проверять HTML-код на ошибки с помощью валидаторов.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch8-1-1.html">Как проверять HTML-код на ошибки с помощью валидаторов.</a></li>
               <li>Практика: исправление ошибок и улучшение качества кода.</li>
             </ul>
           </li>
@@ -213,7 +203,7 @@
           </li>
           <li><strong>Адаптивная верстка</strong>
             <ul>
-              <li><a href="../pages/html/ch8-3-1.html">Основы адаптивности: использование семантических тегов и медиа-запросов.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch8-3-1.html">Основы адаптивности: использование семантических тегов и медиа-запросов.</a></li>
             </ul>
           </li>
         </ol>
@@ -222,13 +212,13 @@
         <ol>
           <li><strong>SEO основы</strong>
             <ul>
-              <li><a href="../pages/html/ch9-1-1.html">Работа с тегами для SEO оптимизации.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch9-1-1.html">Работа с тегами для SEO оптимизации.</a></li>
               <li>Практика: улучшение SEO параметров существующего сайта.</li>
             </ul>
           </li>
           <li><strong>Доступность (Accessibility)</strong>
             <ul>
-              <li><a href="../pages/html/ch9-2-1.html">Создание доступного интерфейса: <code>aria-labels</code>, alt-описания, семантические теги.</a></li>
+              <li><a class="pagesLinks" href="../pages/html/ch9-2-1.html">Создание доступного интерфейса: <code>aria-labels</code>, alt-описания, семантические теги.</a></li>
               <li>Практика: улучшение доступности страницы.</li>
             </ul>
           </li>
@@ -238,14 +228,14 @@
         <ol>
           <li><strong>Создание полного проекта</strong>
             <ul>
-              <li>Реализация многостраничного сайта с использованием всех изученных технологий.</li>
+              <li><a class="pagesLinks" href="../pages/html/ch10-1-1.html">Реализация многостраничного сайта с использованием всех изученных технологий.</a></li>
               <li>Практика: создание и размещение проекта на хостинге.</li>
             </ul>
           </li>
         </ol>
 
         <h3>Статьи HTML</h3>
-        <a href="../pages/html/html_tags.html">Теги HTML</a> <br>
+        <a class="pagesLinks" href="../pages/html/html_tags.html">Теги HTML</a> <br>
       </article>
     </main>
 
